// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select> disables quantity change 1`] = `
<DocumentFragment>
  <div
    class="bundleOptionSelect__root"
  >
    <span
      class="fieldIcons__root"
    >
      <span
        class="fieldIcons__input"
      >
        <select
          class="select__input field__input bundleProduct__option"
        >
          <option
            value="1"
          >
            Carmina Necklace
          </option>
          <option
            value="2"
          >
            Augusta Necklace
          </option>
        </select>
      </span>
      <span
        class="fieldIcons__before"
      />
      <span
        class="fieldIcons__after"
      >
        <span
          class="icon__root"
        >
          <svg
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </span>
      </span>
    </span>
  </div>
  <h2
    class="bundleProduct__quantityTitle"
  >
    <span>
      Quantity
    </span>
  </h2>
  <input
    class="option__quantity"
    disabled=""
    min="1"
    type="number"
    value="1"
  />
</DocumentFragment>
`;

exports[`<Select> renders the component 1`] = `
<DocumentFragment>
  <div
    class="bundleOptionSelect__root"
  >
    <span
      class="fieldIcons__root"
    >
      <span
        class="fieldIcons__input"
      >
        <select
          class="select__input field__input bundleProduct__option"
        >
          <option
            value="1"
          >
            Carmina Necklace
          </option>
          <option
            value="2"
          >
            Augusta Necklace
          </option>
        </select>
      </span>
      <span
        class="fieldIcons__before"
      />
      <span
        class="fieldIcons__after"
      >
        <span
          class="icon__root"
        >
          <svg
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </span>
      </span>
    </span>
  </div>
  <h2
    class="bundleProduct__quantityTitle"
  >
    <span>
      Quantity
    </span>
  </h2>
  <input
    class="option__quantity"
    min="1"
    type="number"
    value="1"
  />
</DocumentFragment>
`;
